add code test plot videos

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+ZZZ/*
+YYY/*
+plots/*
+man/*
+
+###############################################################################
+
 # History files
 .Rhistory
 .Rapp.history
