close gaussian form, corrections regarding theta3 func

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,3 +17,5 @@ export(g_func)
 export(phi)
 export(sigma_such_as_Fourier_tranform_sums_to_one_func)
 export(sinc)
+export(theta3)
+export(theta3dash)
