update dynamic rect formula

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(Zf_func_from_Sf_closed_func)
 export(build_Sf_Sg)
 export(build_f_g_Ff_Fg)
 export(build_f_g_Ff_Fg_from_scratch)
+export(check_equal_tz_func)
 export(coth)
 export(f_func)
 export(frac_minus)
